<resources>
    <string name="app_name">CityHunter</string>
    <string name="title_activity_maps">CityHunter</string>
    <string name="text">Hello</string>
    <string name="start">START</string>
    <string name="label_player">Player:</string>
    <string name="label_score">Score:</string>
    <string name="player">Unknown</string>
    <string name="score">0</string>
    <string name="label_location">Location:</string>
    <string name="latitude">0</string>
    <string name="longitude">0</string>
    <string name="button_action">Action!</string>
    <string name="GPSAlertDialogTitle">Title</string>
    <string name="GPSAlertDialogMessage">Message</string>
    <string name="cancel">Cancel</string>
    <string name="location">Unknown</string>
    <string name="provider">Unknown</string>
    <string name="label_provider">Provider:</string>
    <string name="label_timestamp">Timestamp:</string>
    <string name="timestamp">null</string>
    <string name="location_settings">Settings</string>
    <string name="label_zoom">Zoom:</string>
    <string name="zoom">null</string>
    <string name="button_push">Push</string>

</resources>
